fix: btn size on mobile

--- a/src/components/payment-methods/PaymentMethodsSection.scss
+++ b/src/components/payment-methods/PaymentMethodsSection.scss
@@ -175,7 +175,7 @@
           }
 
           strong {
-            background: $text-color-fourth;
+            background: #4ab8e9;
             background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
